1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (javaswarm.dll): For consistency, use javaswarm.dll.o
	instead of dllinit.o.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (javaswarm_entities, javaswarm_OBJECTS,
	javaswarmstubs_OBJECTS): New variables.
	(libjavaswarm__la_OBJECTS): Use javaswarm_entities.  Remove setup.lo.
	(javaswarm.dll): Use javaswarm_OBJECTS and javaswarmstubs_OBJECTS.

1999-06-05    <mgd@HELEN>

	* Makefile.in (javaswarm.dll): Use .o instead of .lo stubs files.

1999-06-05    <mgd@HELEN>

	* Makefile.in (javaswarm.dll): Remove constructor stuff.  Use wildcard
	reference to objects in their respective modules.  Don't use libraries
	for Swarm things.

1999-06-04    <mgd@HELEN>

	* Makefile.in (install-{la,dll}): Depend on `all'.

1999-05-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (CTOR): New variable.
	(javaswarm.dll): Use it. Depend on $(top_srcdir)/src/dllinit.c.

1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (libjavaswarm.la): Use only libswarm and libobjc.
	(javaswarm.dll): New target.  Use it.
	(all): Use substitution targets.
	(libjavaswarm_.la, libjavaswarmstubs_.la): New intermediate
	targets.
	(DLLWRAP): Substitute.
	(install, install-la, install-dll): Handle install per USEDLL.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (libjavaswarm_la_LDFLAGS): Remove per-module -Ls, using
	just the src/ and libobjc/ build directories.

1999-05-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (libjavaswarm_la_OBJECTS): Remove JavaProxy and
	directory.
	($(libjavaswarmstubs_la_OBJECTS)): Don't depend on directory.
	(libjavaswarm.la): Use SWARMLIBS instead of _SWARMLIBS.

1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (install): Add a libtool `finish'.

1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m: Don't include jni.h.
